fixed spacing issues

--- a/src/common-styles.css
+++ b/src/common-styles.css
@@ -133,9 +133,8 @@ input {
     align-items: center;
     justify-content: center;
 
-    padding: 10rem;
+    padding: 0 20vw;
     min-height: 100%;
-    width: 100%;
     background-color: var(--night);
 
     @media screen and (max-width: 767px) {
@@ -151,12 +150,13 @@ input {
     gap: 3rem;
 
     height: 100%;
+    flex: 0.4;
     padding: 5rem 2rem;
 
     @media screen and (max-width: 767px) {
+        flex: 1;
         padding: 3rem 2rem;
         gap: 1.5rem;
-        width: 100%;
     }
 }
 
